now.

-------------------------------------------------------------------------------

Mon Sep 27 13:31:26 PDT 1999
(Mandrake)

oops, forgot an EDBUG init in those functions


-------------------------------------------------------------------------------

Mon Sep 27 23:54:54 PDT 1999
(Mandrake)

fixed the bug that ganymede would flaunt with spawning menus via buttons
(using spawnMenu()) with click to raise and/or click to focus enabled.

-------------------------------------------------------------------------------

Tue Sep 28 00:12:05 PDT 1999
(Mandrake)

fixed the "restart on wrong desktop if it's the last desktop available" bug.

-------------------------------------------------------------------------------

Tue Sep 28 00:44:15 PDT 1999
(Raster)

add bugs to TODO

-------------------------------------------------------------------------------

Tue Sep 28 15:30:03 PDT 1999
(Raster)

and free desktop bgs more aggressively

-------------------------------------------------------------------------------

Wed Sep 29 12:28:22 EST 1999
(Christian)

Added a gkrellm theme to Ganymede.I really like gkrellm.
Could somebody please explain me the name of that thing?  

-------------------------------------------------------------------------------

Wed Sep 29 17:41:37 PDT 1999
(Raster)

shoudl have elleviated focus swtichng problem... :)

-------------------------------------------------------------------------------

Wed Sep 29 17:43:41 PDT 1999
(Raster)

no debugging printf...

-------------------------------------------------------------------------------

Wed Sep 29 17:52:48 PDT 1999
(Raster)

and fix that event mask...

-------------------------------------------------------------------------------

Wed Sep 29 17:56:39 PDT 1999
(Raster)

update TOTO

-------------------------------------------------------------------------------

Wed Sep 29 18:13:37 PDT 1999
(Mandrake)

nuked useless variable + warning