@@ -2519,3 +2519,10 @@ Wed Sep 29 18:13:37 PDT 1999
 (Mandrake)
 
 nuked useless variable + warning
+
+-------------------------------------------------------------------------------
+
+Thu Sep 30 09:44:14 PDT 1999
+(Raster)
+
+fix typo in icon settings dialog box
